Feature/Tag Style and Layout
  - FIX Multiline strings display newlines as br
  - FIX Feature comments will be displayed
  - FIX tag filtering clear actually clears instead of reloading the page

  + expand/details are links and have a brighter color and different position
  + feature description font increased
  + feature meta information moved below description

  + Tag filtering title larger
  + Better highlighting of the cucumber command line example
  + Tag filtering instructions include typing instructions

--- a/lib/templates/default/feature/html/feature.erb
+++ b/lib/templates/default/feature/html/feature.erb
@@ -6,11 +6,21 @@ $(function() {
 
 <div class="feature">
   <div class="title">
+    <a id="view" class="control" href="#">[More Detail]</a>
+    <a id="expand" class="control" href="#">[Collapse All]</a>
+    <div style="clear: right;"></div>
     <span class="pre"><%= @feature.keyword %>:</span>
     <span class="name"><%= @feature.value %></span>
+  </div>
 
-    <div id="view" class="control">[More Detail]</div>
-    <div id="expand" class="control">[Collapse All]</div>
+  <% if @feature.comments.length > 0 %>
+  <div class="comments developer">
+    <%= htmlify_with_newlines @feature.comments %>  
+  </div>
+  <% end %>
+
+  <div class="description">
+    <%= htmlify_with_newlines @feature.description %>
   </div>
 
   <div class="meta">
@@ -21,14 +31,6 @@ $(function() {
       <a href="<%= url_for tag %>"><%= tag.value %></a>
       <% end %>
     </div>
-  </div>
-
-  <div class="comments developer">
-    <% htmlify_with_newlines @feature.comments %>  
-  </div>
-
-  <div class="description">
-    <%= htmlify_with_newlines @feature.description %>
   </div>
 
   <%= yieldall %>
