--- a/lib/templates/default/fulldoc/html/css/common.css
+++ b/lib/templates/default/fulldoc/html/css/common.css
@@ -144,7 +144,7 @@
 /* Step Transformer Page */
 .transformer * .docstring { margin-left: 20px; margin-top: 10px; padding: 5px 5px 5px 10px; }
 .transformer .steps, .method_details_list, .steps, .method_details_list { margin: 10px 20px 0px 30px; }
-.transformer .steps .step { padding: 4px; }
+.transformer .steps .step { padding: 6px; font-size: 14px; }
 
 
 /* Tag Search Page */
