--- a/lib/templates/default/featuretags/html/namespace.erb
+++ b/lib/templates/default/featuretags/html/namespace.erb
@@ -26,18 +26,31 @@
         });
         
          $(".tag").click(function(evt) {
-            console.log(evt);
             if (typeof evt !== "undefined") {
 
-              if (evt.ctrlKey === true)  {
+              if (evt.shiftKey === true)  {
                 window.location = $(this).attr("href");
-              } else if (evt.altKey === true ) {
-                $("#tag_search")[0].value += ($("#tag_search")[0].value != "" ? "," : "") + this.innerHTML;
-                updateTagFiltering($("#tag_search")[0].value);
-              } else {
-                $("#tag_search")[0].value += ($("#tag_search")[0].value != "" ? " " : "") + this.innerHTML;
-                updateTagFiltering($("#tag_search")[0].value);
+                return true;
               }
+              
+              var tagSearchElement = $("#tag_search")[0];
+              
+              var tagToAdd = this.innerHTML;
+              var tagModifer = "";
+              
+              if (evt.altKey === true ) {
+                tagToAdd = "~" + tagToAdd;
+              }
+              
+              if (evt.ctrlKey === true ) {
+                tagModifier = ",";
+              } else {
+                tagModifier = " ";
+              }
+              
+              tagSearchElement.value = (tagSearchElement.value != "" ? tagSearchElement.value + tagModifier : "") + tagToAdd;
+              updateTagFiltering(tagSearchElement.value);
+              
             }
         });
       });
@@ -54,7 +67,7 @@
         
         <div style="float: left; margin-top: 10px; padding-left: 5px; line-height: 1.5; font-size: 10px; font-style: italic;">
           Type in tags with spaces between to 'AND' and commas between to 'OR'<br/> 
-          Left-click tags to 'AND'; ALT left-click tags to 'OR'
+          Left-click tags to AND them; ALT + left-click tags to AND the negative (~) of the tag
         </div>
         
         <div style="clear: both;"></div>
