Transformer Border and FIX Tag Filter Row
  + Transformer border-top to make it easier to see step definition
    difference
  - FIX Tag Filtering Row would switch odd/even incorrectly

--- a/lib/templates/default/featuretags/html/namespace.erb
+++ b/lib/templates/default/featuretags/html/namespace.erb
@@ -67,7 +67,7 @@
         
         <div style="float: left; margin-top: 10px; padding-left: 5px; line-height: 1.5; font-size: 10px; font-style: italic;">
           Type in tags with spaces between to 'AND' and commas between to 'OR'<br/> 
-          Left-click tags to AND them; ALT + left-click tags to AND the negative (~) of the tag
+          LEFT CLICK to AND tags; CTRL+LEFT CLICK to OR tags; hold ALT for inverse (~) tags
         </div>
         
         <div style="clear: both;"></div>
