--- a/lib/templates/default/fulldoc/html/full_list.erb
+++ b/lib/templates/default/fulldoc/html/full_list.erb
@@ -19,6 +19,8 @@
     <div id="content">
       <h1 id="full_list_header"><%= @list_title %></h1>
       <div id="nav">
+        <a target="_self" href="feature_list.html">Features</a> | 
+        <a target="_self" href="tag_list.html">Tags</a> | 
         <a target="_self" href="class_list.html">Classes</a> | 
         <a target="_self" href="method_list.html">Methods</a> |
         <a target="_self" href="file_list.html">Files</a>
