Step Def/Trans composed of Constants show CONSTANT
  + Step definitions and step transforms that have constants in them
    will use the constant instead of showing the entire regular expression.
    I would have liked to a 'copy to clipboard' operation but it adds
    extra Flash garbage that I don't think makes it important enough.
    The link to rubular still produces the results that one would expect

  + Scenario titles on the feature page it appear more clickable

--- a/lib/templates/default/feature/html/feature.erb
+++ b/lib/templates/default/feature/html/feature.erb
@@ -1,6 +1,7 @@
 <script type="text/javascript" charset="utf-8">
 $(function() {
   $(".developer").hide();
+  $(".scenario").css('cursor','pointer');
 });
 </script>
 
