Feature Directory README.md support
  Feature Directories that have README.md files will be loaded into
  the FeatureDirectory description field and be displayed on the
  Directory page.  This is to provide more information, if present,
  for the features grouped together in the directory.

  Currently README.md is the only supported file name.
  While declared with the markdown extension it currently just
  respects space and newlines.

--- a/lib/templates/default/featuredirectory/html/directory.erb
+++ b/lib/templates/default/featuredirectory/html/directory.erb
@@ -15,29 +15,9 @@
       <%= tags.collect {|tag| linkify(tag,tag.value) }.join(",\n") %>
     </div>
 
-
-    <% if @directories_by_letter && !@directories_by_letter.empty? %>
-      <div id="directory">
-        <div class="title"><span class="name">Subdirectories</span></div>
-      </div>
-      <% i = 0 %>
-      <table>
-        <tr>
-          <td valign='top' width="33%">
-            <% @directories_by_letter.each do |directory| %>
-              <% if (i += 1) % 8 == 0 %>
-              </td><td valign='top' width="33%">
-                <% i = 0 %>
-              <% end %>
-              <ul>
-                <%= linkify directory, directory.name %>
-              </ul>
-            <% end %>
-          </td>
-        </tr>
-      </table>
-
-    <% end %>
+    <div class="summary">
+      <%= htmlify_with_newlines @directory.description %>
+    </div>
 
     <% if @objects_by_letter && !@objects_by_letter.empty? %>
       <div id="features">
@@ -70,6 +50,29 @@
         </tr>
       </table>
     <% end %>
+  <% end %>
+
+  <% if @directories_by_letter && !@directories_by_letter.empty? %>
+    <div id="directory">
+      <div class="title"><span class="name">Subdirectories</span></div>
+    </div>
+    <% i = 0 %>
+    <table>
+      <tr>
+        <td valign='top' width="33%">
+          <% @directories_by_letter.each do |directory| %>
+            <% if (i += 1) % 8 == 0 %>
+            </td><td valign='top' width="33%">
+              <% i = 0 %>
+            <% end %>
+            <ul>
+              <%= linkify directory, directory.name %>
+            </ul>
+          <% end %>
+        </td>
+      </tr>
+    </table>
+
   <% end %>
 
 </div>
