--- a/lib/templates/default/featuredirectory/html/directory.erb
+++ b/lib/templates/default/featuredirectory/html/directory.erb
@@ -1,4 +1,7 @@
 <% if @directory %>
+  <div class="readme">
+    <%= htmlify @directory.description, :markdown %>
+  </div>
   <div class="requirements">
     <div class="title">
       <span class="pre">Directory:</span>
@@ -13,10 +16,6 @@
     </div>
     <div class="tags"><span class="name">Tags:</span>
       <%= tags.collect {|tag| linkify(tag,tag.value) }.join(",\n") %>
-    </div>
-
-    <div class="summary">
-      <%= htmlify_with_newlines @directory.description %>
     </div>
 
     <% if @objects_by_letter && !@objects_by_letter.empty? %>
