--- a/lib/templates/default/fulldoc/html/css/common.css
+++ b/lib/templates/default/fulldoc/html/css/common.css
@@ -20,6 +20,7 @@
 
 .suggestion { color: #ff686e; }
 
+.readme { margin: 0px 10px 0px 20px; padding: 10px 0px 0px 0px; }
 
 .feature .description, .requirements .summary {
     margin: 10px 20px 0px 30px;
