Requirements Landing Changes
  + Feature list is the most prominent;  Totals have been removed; Tags have
    been moved.

  + Two columns should now generate evenly for features and subdirectories.

  + Feature subdirectories and feature list share the same renderer.
  + subdirectories listed are only subdirectories of the parent feature directory

  -> All Features will now take you to the root Feature Directory.  If two are present
     you are transported to the Requirements splash page (only way to ensure you see
     all features).

--- a/lib/templates/default/fulldoc/html/full_list_features.erb
+++ b/lib/templates/default/fulldoc/html/full_list_features.erb
@@ -1,6 +1,6 @@
 <% n = 1 %>
 <li class="r<%= n %>">
-  <%= linkify YARD::CodeObjects::Cucumber::CUCUMBER_NAMESPACE, "All Features" %>
+  <%= all_features_link %>
 </li>
 <% n = n == 2 ? 1 : 2 %>
 <% @items.each do |feature| %>
