Feature Directory Rearrangement
  + Feature Directories now have some helper methods to return their
    sub feature directories and their features

  + Feature Directories will now show all features and all directories
    that are sub-directories of that directory

  + Changed format so that columns will be correct when an odd number
    of entries are displayed in it.

  + Features are displayed without a title; Stats have been removed;
    Tags have a full heading.

--- a/lib/templates/default/fulldoc/html/css/common.css
+++ b/lib/templates/default/fulldoc/html/css/common.css
@@ -20,7 +20,9 @@
 
 .suggestion { color: #ff686e; }
 
-.readme { margin: 0px 10px 0px 30px; padding: 0px; }
+.readme { margin: 0px 20px 0px 30px; padding: 0px; }
+.readme h1:first-child { border-top: none; }
+
 
 .feature .description, .requirements .summary {
     margin: 10px 20px 0px 30px;
