FIXES: Feature-Scenario Link & Cursor
  - FIX mouse pointer is changed to 'pointer' only over scenario title
  - FIX scenario links were not printing their url

--- a/lib/templates/default/feature/html/feature.erb
+++ b/lib/templates/default/feature/html/feature.erb
@@ -1,7 +1,7 @@
 <script type="text/javascript" charset="utf-8">
 $(function() {
   $(".developer").hide();
-  $(".scenario").css('cursor','pointer');
+  $(".scenario .title").css('cursor','pointer');
 });
 </script>
 
