FIX: Step Transformer Collapse Link
  - FIX the step transformer link no longer jumps the view to the top
    of the browser.

--- a/lib/templates/default/steptransformers/html/header.erb
+++ b/lib/templates/default/steptransformers/html/header.erb
@@ -1,6 +1,6 @@
 <div class="title">
   <% if @item_type %>
-     <a class="control" href="#" id="<%= @item_type.gsub(/\s/,'') %>">[Collapse All]</a>
+     <a class="control" id="<%= @item_type.gsub(/\s/,'') %>">[Collapse All]</a>
      <div style="clear: right;"></div>
    <% end %>
  
