--- a/lib/templates/default/requirements/html/requirements.erb
+++ b/lib/templates/default/requirements/html/requirements.erb
@@ -31,7 +31,17 @@
     <% else %>
       <!-- No Feature Directories -->
     <% end %>
-
+    
+    <div id="directory" style="margin-left: 40px;">
+      <div class="title"><span class="name">Step Definitions &amp; Transforms</span></div>
+    </div>
+    <div class="steptransformers">
+      <%= step_definitions.length %> <%= linkify step_definitions.first, "Step Definitions" %>,
+      <%= transformers.length %> <%= linkify transformers.first, "Transforms" %>,
+      and <%= undefined_steps.length %>
+      <a href="<%= url_for step_transformers, "#undefined_steps" %>">Undefined Steps</a>
+    </div>
+    
   </div>
 <% end %>
 
