--- a/lib/templates/default/requirements/html/requirements.erb
+++ b/lib/templates/default/requirements/html/requirements.erb
@@ -39,7 +39,7 @@
       <%= step_definitions.length %> <%= linkify step_definitions.first, "Step Definitions" %>,
       <%= transformers.length %> <%= linkify transformers.first, "Transforms" %>,
       and <%= undefined_steps.length %>
-      <a href="<%= url_for step_transformers, "#undefined_steps" %>">Undefined Steps</a>
+      <a href="<%= url_for step_transformers, "undefined_steps" %>">Undefined Steps</a>
     </div>
     
   </div>
