FIX: Step Definitions/Transform Comments
  - Step definitions/Transforms that have certain comments will blow up.
    When an exception is raised, CITY should recover and give a warning with
    the location.

  - Step transforms for values that are not constants, like the value injected
    by Pickle are currently out of my scope but I now just return the string
    value instead of a blank string.

--- a/lib/templates/default/steptransformers/html/transformers.erb
+++ b/lib/templates/default/steptransformers/html/transformers.erb
@@ -18,7 +18,7 @@
     
     <!-- Comments -->
     <div>
-      <%= T('docstring').run(options.dup.merge({:object => item})) %>
+      <%= display_comments_for item %>
     </div>
     
 
