FIX: Scenarios in Tag view link correctly
  Overriding the alpha_table for the tags to use the path to the scenarios
  and scenario outlines

--- a/lib/templates/default/fulldoc/html/full_list_features.erb
+++ b/lib/templates/default/fulldoc/html/full_list_features.erb
@@ -15,7 +15,7 @@
 	<% feature.scenarios.each_with_index do |scenario,index| %>
 	<li class="r<%= n %>">
 	  <span class='object_link'>
-   		<a href="<%= url_for(scenario.feature,"scenario#{index}") %>">
+   		<a href="<%= url_for(scenario.feature,"scenario_#{index}") %>">
    		  <%= h scenario.value %>
    		</a>
    	</span>
