Links for CITY to YARD-Cucumber
 + Requirements splash page linked to Cucumber-In-The-YARD changed to the
   current YARD-Cucumber.

--- a/lib/templates/default/requirements/html/requirements.erb
+++ b/lib/templates/default/requirements/html/requirements.erb
@@ -4,7 +4,7 @@
     <a href="http://cukes.info/">Cucumber</a> |
     <a href="http://github.com/aslakhellesoy/cucumber/wiki/Gherkin">Gherkin</a> |
     <a href="http://yardoc.org/">YARD</a> |
-    <a href="http://github.com/burtlo/Cucumber-In-The-Yard">Cucumber-In-The-YARD</a>
+    <a href="https://github.com/burtlo/yard-cucumber">YARD-Cucumber</a>
   </div>
 
   <div class="requirements">
