Layout headers and search
 + Moved the features and tags to the end of the search fields
 + Also moved the logic for the headers and search to a method so that other
   plugins that I am working on will play nice with each other.

--- a/lib/templates/default/layout/html/headers.erb
+++ b/lib/templates/default/layout/html/headers.erb
@@ -1,4 +1,4 @@
-<meta name="Content-Type" content="text/html; charset=<%= charset %>" />
+<meta http-equiv="Content-Type" content="text/html; charset=<%= charset %>" />
 <title><%= @page_title %></title>
 <link rel="stylesheet" href="<%= url_for("css/style.css") %>" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="<%= url_for("css/common.css") %>" type="text/css" media="screen" charset="utf-8" />
@@ -9,6 +9,6 @@
   relpath = '<%= url_for('') %>';
   if (relpath != '') relpath += '/';
 </script>
-<script type="text/javascript" charset="utf-8" src="<%= url_for("js/jquery.js") %>"></script>
-<script type="text/javascript" charset="utf-8" src="<%= url_for("js/app.js") %>"></script>
-<script type="text/javascript" charset="utf-8" src="<%= url_for("js/cucumber.js") %>"></script>
+<% javascript_files.each do |js_file| %>
+  <script type="text/javascript" charset="utf-8" src="<%= url_for(js_file) %>"></script>
+<% end %>
