--- a/lib/templates/default/layout/html/search.erb
+++ b/lib/templates/default/layout/html/search.erb
@@ -1,7 +1,5 @@
 <div id="search">
-  <a id="features_list_link" href="#">Features</a>
-  <a id="tags_list_link" href="#">Tags</a>
-  <a id="class_list_link" href="#">Class List</a>
-  <a id="method_list_link" href="#">Method List</a>
-  <a id ="file_list_link" href="#">File List</a>
+  <% search_fields.each do |id,name| %>
+  <a id="<%= id %>" href="#"><%= name %></a>
+  <% end %>
 </div>
