--- a/lib/templates/default/feature/html/outline.erb
+++ b/lib/templates/default/feature/html/outline.erb
@@ -9,32 +9,36 @@
 <div class="outline">
   
   <% if @scenario.examples? %>
-  <div class="keyword"> <%= h @scenario.example_keyword %></div>
-  <table>
-    <thead>
-      <tr>
-        <% @scenario.example_headers.each_with_index do |header,header_index| %>
-          <th><%= h(header) %></th>
+  
+    <% @scenario.examples.each do |example| %>
+      <div class="keyword"> <%= h example.keyword %></div>
+      <table>
+        <thead>
+          <tr>
+            <% example.headers.each_with_index do |header,header_index| %>
+              <th><%= h(header) %></th>
+            <% end %>
+          </tr>
+        </thead>
+        <% unless example.data.empty? %>
+          <% example.data.each_with_index do |row,row_index| %>
+          <tr class="<%= (row_index + 1) % 2 == 0 ? "even example#{row_index +1}" : "odd example#{row_index +1}" %>">
+            <% row.each_with_index do |column,column_index| %>
+              <td><%= h(column.to_s.strip) %></td>
+            <% end %>
+          </tr>
+          <% end %>
+        <% else %>
+          <!-- Scenario Outline example table is empty -->
+          <tr class="odd">
+            <td colspan="<%= example.headers.length %>" style="text-align: center;">
+              No Examples Defined
+            </td>
+          </tr>
         <% end %>
-      </tr>
-    </thead>
-    <% unless @scenario.example_data.empty? %>
-      <% @scenario.example_data.each_with_index do |row,row_index| %>
-      <tr class="<%= (row_index + 1) % 2 == 0 ? "even example#{row_index +1}" : "odd example#{row_index +1}" %>">
-        <% row.each_with_index do |column,column_index| %>
-          <td><%= h(column.to_s.strip) %></td>
-        <% end %>
-      </tr>
-      <% end %>
-    <% else %>
-      <!-- Scenario Outline example table is empty -->
-      <tr class="odd">
-        <td colspan="<%= @scenario.example_headers.length %>" style="text-align: center;">
-          No Examples Defined
-        </td>
-      </tr>
-    <% end %>
-  </table>
+      </table>
+    <% end  %>
+    
   <% else %>
   <div class="keyword">No Example Table Defined</div>
   <div class="keyword suggestion developer">[!] Did you mean to create a Scenario?</div>
